[gd_scene load_steps=3 format=3 uid="uid://gq305gn3qpy4"]

[ext_resource type="Script" path="res://control.gd" id="1_qt8kx"]
[ext_resource type="Texture2D" uid="uid://cqhrewewoayc4" path="res://World/Background/bg.png" id="1_riodp"]

[node name="Control" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_qt8kx")

[node name="bg" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 4.0
offset_top = 14.0
offset_right = 4.0
offset_bottom = -6.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("1_riodp")
expand_mode = 1

[node name="HBoxContainer" type="HBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -182.0
offset_top = -116.0
offset_right = 182.0
offset_bottom = 116.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="HBoxContainer"]
layout_mode = 2

[node name="btn_start" type="Button" parent="HBoxContainer/VBoxContainer"]
layout_mode = 2
text = "START"

[node name="btn_controles" type="Button" parent="HBoxContainer/VBoxContainer"]
layout_mode = 2
text = "CONTROLES"

[node name="btn_sair" type="Button" parent="HBoxContainer/VBoxContainer"]
layout_mode = 2
text = "SAIR"

[connection signal="pressed" from="HBoxContainer/VBoxContainer/btn_start" to="." method="_on_btn_start_pressed"]
[connection signal="pressed" from="HBoxContainer/VBoxContainer/btn_controles" to="." method="_on_btn_controles_pressed"]
[connection signal="pressed" from="HBoxContainer/VBoxContainer/btn_sair" to="." method="_on_btn_sair_pressed"]
